# exam_Langchain

./: .env  .env.example  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile.streamlit  app.py  requirements.txt
src/api/assistant/: Dockerfile.main  main.py  requirements.txt
src/api/authentification/: Dockerfile.auth  auth.py  requirements.txt
src/core/: chains.py  llm.py  schemas.py
src/memory/: memory.py
src/pages/: 2_langsmith.py
src/prompts/: prompts.py
tests/: test_assistant_api.py  test_auth_api.py  test_container_integration.py
