[project]
name = "langchain-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.116.1",
    "langchain==1.2.12",
    "langchain-community==0.4.1",
    "langchain-core==1.2.20",
    "langchain-groq==1.1.2",
    "langchain-openai==1.1.11",
    "langgraph==1.1.3",
    "langsmith==0.7.20",
    "pydantic==2.11.7",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "streamlit==1.47.1",
    "requests==2.32.5",
    "uvicorn==0.35.0",
]
